--- a/.github/workflows/terraform-change-management.yaml
+++ b/.github/workflows/terraform-change-management.yaml
@@ -5,8 +5,12 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env: 
-  TF_LOG: 'verbose'
+  TF_LOG: 'info'
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: "us-east-1"
